--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["@babel/env", "@babel/react"]
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": ["last 5 versions", "ie >= 9"]
+      }
+    ],
+    "@babel/react"
+  ]
 }
