--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "homepage": "https://Ronidey.github.io/react-color-picker",
   "dependencies": {
+    "@babel/runtime": "^7.10.4",
+    "core-js": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
